# lockattr

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
src/lockattrs/: __init__.py  decorators.py
tests/: test_lockattrs.py
