[metadata]
name = lockattrs
version = 0.0.2
author = D Reschner
author_email = git@simphotonics.com
description = Decorator used to lock class attributes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simphotonics/lockattrs
project_urls =
    Bug Tracker = https://github.com/simphotonics/lockattrs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
per-file-ignores = __init__.py:F401
